--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,19 @@
 // Fonts
-@import url('https://fonts.googleapis.com/css?family=Nunito');
+// @import url('https://fonts.googleapis.com/css?family=Nunito');
 
 // Variables
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+// @import '~bootstrap/scss/bootstrap';
+
+// import bulma and font-aweome
+@import "node_modules/font-awesome/scss/font-awesome";
+
+@import 'node_modules/bulma/bulma';
+
+// import buefy
+@import 'node_modules/buefy/src/scss/buefy';
 
 .navbar-laravel {
     background-color: #fff;
