--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,7 +15,11 @@
 // import buefy
 @import 'node_modules/buefy/src/scss/buefy';
 
-.navbar-laravel {
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
-}
+
+// custom sass
+
+@import "overrides";
+
+@import "helpers";
+
+@import "styles";
