added search functionality to the app

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18592,6 +18592,16 @@ nav .navWide {
   box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.4);
 }
 
+#rlist {
+  position: absolute;
+  z-index: 999;
+}
+
+#userls {
+  position: absolute;
+  z-index: 999;
+}
+
 /*!
  * animate.css -https://daneden.github.io/animate.css/
  * Version - 3.7.2
