--- a/resources/sass/styles.scss
+++ b/resources/sass/styles.scss
@@ -48,3 +48,14 @@
     -webkit-box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.4);
     box-shadow: -1px -1px 2px rgba(0, 0, 0, 0.4);
 }
+
+#rlist {
+    position: absolute;
+
+    z-index: 999;
+}
+#userls{
+     position: absolute;
+
+    z-index: 999;
+}
